--- a/css/service.css
+++ b/css/service.css
@@ -39,9 +39,9 @@ header nav.on {
 
 header nav > div {
     width: 1000px;
-    height: 100%;
+    height: 100vh;
     float: right;
-    border-top: 1080px solid #fff;
+    border-top: 1090px solid #fff;
     border-left: 180px solid transparent;
     margin-right: -1500px;
     transition: .5s;
@@ -54,10 +54,10 @@ header nav > div.on {
 header nav > div > a {
     position: absolute;
     top: 0;
-    left: 60vw;
+    left: 63vw;
     display: block;
     font-family: 'DM Serif Display', serif;
-    font-size: 2.778em;
+    font-size: 3em;
     text-transform: uppercase;
     opacity: 0;
     transition: .7s;
@@ -69,20 +69,21 @@ header nav > div.on > a {
 }
 
 header nav > div > a:nth-of-type(1) {
-    top: 270px;
+    top: 330px;
 }
 
 header nav > div > a:nth-of-type(2) {
-    top: 370px;
+    top: 430px;
 }
 
 header nav > div > a:nth-of-type(3) {
-    top: 470px;
+    top: 530px;
 }
 
 header nav > div > a:nth-of-type(4) {
-    top: 570px;
+    top: 630px;
 }
+
 
 header nav div > a.on,
 header nav div > a:hover {
@@ -399,6 +400,8 @@ header .burger_menu span:nth-of-type(3) {
 
 .content_box .map {
     width: 100%;
+    height: 800px;
+    overflow: hidden;
 }
 
 .content_box .map > div {
