--- a/css/showroom.css
+++ b/css/showroom.css
@@ -219,7 +219,7 @@ header .burger_menu span:nth-of-type(3) {
     width: 100%;
     height: 500px;
     padding: 210px 0 0 210px;
-    background: #f5f5f5 url(../img/lookbook_back.png) no-repeat center right 7%;
+    background: #f5f5f5 url(../img/showroom_back.png) no-repeat center right;
     background-size: contain;
     margin-bottom: 120px;
 }
@@ -231,160 +231,36 @@ header .burger_menu span:nth-of-type(3) {
     padding-bottom: 50px;
 }
 
+.content_tit nav {}
+
+.content_tit nav a {
+    font-size: 1.3em;
+}
+
+.content_tit nav a.on,
+.content_tit nav a:hover {
+    font-weight: bold;
+    color: #0f4c82;
+}
+
+.content_tit nav a:after {
+    content: '';
+    width: 2px;
+    height: 1em;
+    position: relative;
+    top: 4px;
+    display: inline-block;
+    background: #999;
+    margin: 0 30px;
+    cursor: default;
+}
+
+.content_tit nav a:nth-of-type(2):after {
+    display: none;
+}
+
 .content_box {}
 
-.content_box ul {
-    width: 85%;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.content_box > ul > li {
-    margin-bottom: 60px;
-}
-
-.content_box ul li figure {
-    position: relative;
-    font-size: 0;
-    cursor: pointer;
-}
-
-.content_box ul li figure img {}
-
-.content_box ul li figure figcaption {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    opacity: 0;
-    transition: .5s;
-}
-
-.content_box ul li figure:before {
-    content: '';
-    display: block;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: rgba(0, 0, 0, .5);
-    opacity: 0;
-    transition: .5s;
-}
-
-.content_box ul li figure:after {
-    content: '';
-    display: block;
-    width: 90%;
-    height: 90%;
-    position: absolute;
-    top: 5%;
-    left: 5%;
-    border: 1px solid #fff;
-    z-index: 10;
-    opacity: 0;
-    transition: .5s;
-}
-
-.content_box ul li figure:hover:before,
-.content_box ul li figure:hover:after,
-.content_box ul li figure:hover figcaption {
-    opacity: 1;
-}
-
-.content_box ul li figure figcaption strong {
-    color: #fff;
-    font-family: 'DM Serif Display', serif;
-    font-size: 2.778em;
-    font-weight: normal;
-}
-
-.content_box ul li figure figcaption small {
-    color: #fff;
-    font-family: 'DM Serif Display', serif;
-    font-size: 1.667em;
-}
-
-.content_box .gallery {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background: rgba(0, 0, 0, .5);
-    z-index: 100;
-}
-
-.content_box .gallery ul {}
-
-.content_box .gallery ul li {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    display: none;
-    transition: .5s;
-    font-size: 0;
-}
-
-.content_box .gallery ul li.on {
-    display: block;
-    z-index: 10;
-}
-
-.content_box .gallery ul li img {
-    max-height: 800px;
-    max-width: 800px;
-}
-
-.content_box .gallery strong {
-    color: #fff;
-    font-size: 1em;
-}
-
-.content_box .gallery > span {
-    position: absolute;
-}
-
-.content_box .gallery span:nth-of-type(1) {
-    bottom: 50px;
-    left: 50%;
-    transform: translateX(-50%);
-    color: #fff;
-    font-size: 0.833em;
-}
-
-.content_box .gallery span:nth-of-type(2) {
-    top: 50%;
-    transform: translateY(-50%);
-    left: 400px;
-    cursor: pointer;
-}
-
-.content_box .gallery span:nth-of-type(3) {
-    top: 50%;
-    transform: translateY(-50%);
-    right: 400px;
-    cursor: pointer;
-}
-
-.content_box .gallery span a {
-    color: #fff;
-    font-size: 1em;
-}
-
-.content_box .gallery span a:hover {
-    text-decoration: underline;
-}
 
 aside {
     position: fixed;
