--- a/asset/css/lookbook.css
+++ b/asset/css/lookbook.css
@@ -52,46 +52,34 @@ header nav > div.on {
     margin-right: 0px;
 }
 
-header nav > div > a {
+header nav > div .menu_nav {
     position: absolute;
     top: 0;
-    left: 63vw;
-    display: block;
+    right: 0;
+    width: 650px;
+    height: 100%;
+    z-index: 5;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+header nav > div .menu_nav a {
+    display: inline-block;
     font-family: 'DM Serif Display', serif;
+    padding: 10px;
     font-size: 3em;
     text-transform: uppercase;
-    opacity: 0;
     transition: .7s;
-    z-index: 30;
 }
 
-header nav > div.on > a {
-    opacity: 1;
-}
-
-header nav > div > a:nth-of-type(1) {
-    top: 330px;
-}
-
-header nav > div > a:nth-of-type(2) {
-    top: 430px;
-}
-
-header nav > div > a:nth-of-type(3) {
-    top: 530px;
-}
-
-header nav > div > a:nth-of-type(4) {
-    top: 630px;
-}
-
-
-header nav div > a.on,
-header nav div > a:hover {
+header nav div .menu_nav a.on,
+header nav div .menu_nav a:hover {
     color: #0f4c82;
 }
 
-header nav > div > a:after {
+header nav > div .menu_nav a:after {
     content: '';
     position: relative;
     display: block;
@@ -106,7 +94,7 @@ header nav > div > a:after {
     z-index: -1;
 }
 
-header nav > div > a:hover:after {
+header nav > div .menu_nav a:hover:after {
     visibility: visible;
     opacity: 1;
 }
@@ -118,6 +106,7 @@ header nav div .sub_menu {
     top: 0;
     right: 0;
     background: #0f4c82;
+    z-index: 10;
 }
 
 header nav div .sub_menu div {
