--- a/asset/css/event.css
+++ b/asset/css/event.css
@@ -38,12 +38,28 @@ header nav.on {
     opacity: 1;
 }
 
+header nav > div {
+    width: 1000px;
+    height: 100vh;
+    max-height: 1100px;
+    float: right;
+    border-top: 1090px solid #fff;
+    border-left: 180px solid transparent;
+    margin-right: -1500px;
+    transition: .5s;
+}
+
+header nav > div.on {
+    margin-right: 0px;
+}
+
 header nav > div .menu_nav {
     position: absolute;
     top: 0;
     right: 0;
     width: 650px;
     height: 100%;
+    max-height: 1100px;
     z-index: 5;
     display: flex;
     flex-direction: column;
