--- a/asset/css/faq.css
+++ b/asset/css/faq.css
@@ -41,6 +41,7 @@ header nav.on {
 header nav > div {
     width: 1000px;
     height: 100vh;
+    max-height: 1100px;
     float: right;
     border-top: 1090px solid #fff;
     border-left: 180px solid transparent;
@@ -52,12 +53,14 @@ header nav > div.on {
     margin-right: 0px;
 }
 
+
 header nav > div .menu_nav {
     position: absolute;
     top: 0;
     right: 0;
     width: 650px;
     height: 100%;
+    max-height: 1100px;
     z-index: 5;
     display: flex;
     flex-direction: column;
