--- a/asset/css/service.css
+++ b/asset/css/service.css
@@ -40,6 +40,7 @@ header nav.on {
 header nav > div {
     width: 1000px;
     height: 100vh;
+    max-height: 1100px;
     float: right;
     border-top: 1090px solid #fff;
     border-left: 180px solid transparent;
@@ -57,6 +58,7 @@ header nav > div .menu_nav {
     right: 0;
     width: 650px;
     height: 100%;
+    max-height: 1100px;
     z-index: 5;
     display: flex;
     flex-direction: column;
