--- a/asset/css/showroom.css
+++ b/asset/css/showroom.css
@@ -57,6 +57,7 @@ header nav > div .menu_nav {
     right: 0;
     width: 650px;
     height: 100%;
+    max-height: 1100px;
     z-index: 5;
     display: flex;
     flex-direction: column;
